syntax-tree/src/main/antlr/me/cynsin/lualike/LuaLikeParser.java
// Generated from C:/Users/james/IdeaProjects/LuaLike/syntax-tree/src/main/resources\LuaLikeParser.g4 by ANTLR 4.12.0
package me.cynsin.lualike;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class LuaLikeParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.12.0", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		LONGSTRING=1, COMMENT=2, LINE_COMMENT=3, OPEN_PARENTHESES=4, CLOSE_PARENTHESES=5, 
		COLON=6, FUNCTION=7, COMMA=8, VARARGS=9, NIL=10, TRUE=11, FALSE=12, DOT=13, 
		COLON_COLON=14, BREAK=15, GOTO=16, DO=17, END=18, SEMI=19, EQUALS=20, 
		WHILE=21, REPEAT=22, UNTIL=23, IF=24, THEN=25, ELSEIF=26, ELSE=27, FOR=28, 
		IN=29, LOCAL=30, RETURN=31, CONTINUE=32, OR=33, AND=34, NOT=35, COUNT=36, 
		GREATER_THAN=37, LESS_THAN=38, STR_CONCAT=39, BIT_XOR=40, NOT_EQUAL=41, 
		GREATER_THAN_OR_EQUAL=42, LESS_THAN_OR_EQUAL=43, EQUAL_EQUAL=44, PLUS=45, 
		MINUS=46, MULTIPLY=47, DIVIDE=48, MODULO=49, POW=50, BIT_AND=51, BIT_OR=52, 
		SHIFT_LEFT=53, SHIFT_RIGHT=54, OPEN_BRACE=55, CLOSE_BRACE=56, OPEN_SQUARE_BRACKET=57, 
		CLOSE_SQUARE_BRACKET=58, INT=59, HEX=60, FLOAT=61, HEX_FLOAT=62, NAME=63, 
		NORMALSTRING=64, CHARSTRING=65, WS=66, SHEBANG=67;
	public static final int
		RULE_chunk = 0, RULE_block = 1, RULE_stat = 2, RULE_attribList = 3, RULE_laststat = 4, 
		RULE_label = 5, RULE_object = 6, RULE_objectAttributes = 7, RULE_functionObjectEntry = 8, 
		RULE_funcname = 9, RULE_varlist = 10, RULE_namelist = 11, RULE_explist = 12, 
		RULE_reference = 13, RULE_exp = 14, RULE_literalexp = 15, RULE_var = 16, 
		RULE_varSuffix = 17, RULE_nameAndArgs = 18, RULE_args = 19, RULE_functiondef = 20, 
		RULE_funcbody = 21, RULE_parlist = 22, RULE_tableconstructor = 23, RULE_fieldlist = 24, 
		RULE_field = 25, RULE_fieldsep = 26, RULE_operatorOr = 27, RULE_operatorAnd = 28, 
		RULE_operatorComparison = 29, RULE_operatorStrcat = 30, RULE_operatorAddSub = 31, 
		RULE_operatorMulDivMod = 32, RULE_operatorBitwise = 33, RULE_operatorUnary = 34, 
		RULE_operatorPower = 35, RULE_number = 36, RULE_string = 37;
	private static String[] makeRuleNames() {
		return new String[] {
			"chunk", "block", "stat", "attribList", "laststat", "label", "object", 
			"objectAttributes", "functionObjectEntry", "funcname", "varlist", "namelist", 
			"explist", "reference", "exp", "literalexp", "var", "varSuffix", "nameAndArgs", 
			"args", "functiondef", "funcbody", "parlist", "tableconstructor", "fieldlist", 
			"field", "fieldsep", "operatorOr", "operatorAnd", "operatorComparison", 
			"operatorStrcat", "operatorAddSub", "operatorMulDivMod", "operatorBitwise", 
			"operatorUnary", "operatorPower", "number", "string"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, "'('", "')'", "':'", "'function'", "','", "'...'", 
			"'nil'", "'true'", "'false'", "'.'", "'::'", "'break'", "'goto'", "'do'", 
			"'end'", "';'", "'='", "'while'", "'repeat'", "'until'", "'if'", "'then'", 
			"'elseif'", "'else'", "'for'", "'in'", "'local'", "'return'", "'continue'", 
			"'or'", "'and'", "'not'", "'#'", "'>'", "'<'", "'..'", "'~'", "'~='", 
			"'>='", "'<='", "'=='", "'+'", "'-'", "'*'", "'/'", "'%'", "'^'", "'&'", 
			"'|'", "'<<'", "'>>'", "'{'", "'}'", "'['", "']'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "LONGSTRING", "COMMENT", "LINE_COMMENT", "OPEN_PARENTHESES", "CLOSE_PARENTHESES", 
			"COLON", "FUNCTION", "COMMA", "VARARGS", "NIL", "TRUE", "FALSE", "DOT", 
			"COLON_COLON", "BREAK", "GOTO", "DO", "END", "SEMI", "EQUALS", "WHILE", 
			"REPEAT", "UNTIL", "IF", "THEN", "ELSEIF", "ELSE", "FOR", "IN", "LOCAL", 
			"RETURN", "CONTINUE", "OR", "AND", "NOT", "COUNT", "GREATER_THAN", "LESS_THAN", 
			"STR_CONCAT", "BIT_XOR", "NOT_EQUAL", "GREATER_THAN_OR_EQUAL", "LESS_THAN_OR_EQUAL", 
			"EQUAL_EQUAL", "PLUS", "MINUS", "MULTIPLY", "DIVIDE", "MODULO", "POW", 
			"BIT_AND", "BIT_OR", "SHIFT_LEFT", "SHIFT_RIGHT", "OPEN_BRACE", "CLOSE_BRACE", 
			"OPEN_SQUARE_BRACKET", "CLOSE_SQUARE_BRACKET", "INT", "HEX", "FLOAT", 
			"HEX_FLOAT", "NAME", "NORMALSTRING", "CHARSTRING", "WS", "SHEBANG"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "LuaLikeParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public LuaLikeParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ChunkContext extends ParserRuleContext {
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public TerminalNode EOF() { return getToken(LuaLikeParser.EOF, 0); }
		public ChunkContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_chunk; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LuaLikeParserVisitor ) return ((LuaLikeParserVisitor<? extends T>)visitor).visitChunk(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ChunkContext chunk() throws RecognitionException {
		ChunkContext _localctx = new ChunkContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_chunk);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(76);
			block();
			setState(77);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BlockContext extends ParserRuleContext {
		public List<StatContext> stat() {
			return getRuleContexts(StatContext.class);
		}
		public StatContext stat(int i) {
			return getRuleContext(StatContext.class,i);
		}
		public LaststatContext laststat() {
			return getRuleContext(LaststatContext.class,0);
		}
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LuaLikeParserVisitor ) return ((LuaLikeParserVisitor<? extends T>)visitor).visitBlock(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_block);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(82);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(79);
					stat();
					}
					} 
				}
				setState(84);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			}
			setState(86);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 6442483712L) != 0)) {
				{
				setState(85);
				laststat();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatContext extends ParserRuleContext {
		public StatContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stat; }
	 
		public StatContext() { }
		public void copyFrom(StatContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class DoStatementContext extends StatContext {
		public TerminalNode DO() { return getToken(LuaLikeParser.DO, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public TerminalNode END() { return getToken(LuaLikeParser.END, 0); }
		public DoStatementContext(StatContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LuaLikeParserVisitor ) return ((LuaLikeParserVisitor<? extends T>)visitor).visitDoStatement(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class LabelStatementContext extends StatContext {
		public LabelContext label() {
			return getRuleContext(LabelContext.class,0);
		}
		public LabelStatementContext(StatContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LuaLikeParserVisitor ) return ((LuaLikeParserVisitor<? extends T>)visitor).visitLabelStatement(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class EmptyStatementContext extends StatContext {
		public TerminalNode SEMI() { return getToken(LuaLikeParser.SEMI, 0); }
		public EmptyStatementContext(StatContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LuaLikeParserVisitor ) return ((LuaLikeParserVisitor<? extends T>)visitor).visitEmptyStatement(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class WhileStatementContext extends StatContext {
		public TerminalNode WHILE() { return getToken(LuaLikeParser.WHILE, 0); }
		public ExpContext exp() {
			return getRuleContext(ExpContext.class,0);
		}
		public TerminalNode DO() { return getToken(LuaLikeParser.DO, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public TerminalNode END() { return getToken(LuaLikeParser.END, 0); }
		public WhileStatementContext(StatContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LuaLikeParserVisitor ) return ((LuaLikeParserVisitor<? extends T>)visitor).visitWhileStatement(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class BreakStatementContext extends StatContext {
		public TerminalNode BREAK() { return getToken(LuaLikeParser.BREAK, 0); }
		public BreakStatementContext(StatContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LuaLikeParserVisitor ) return ((LuaLikeParserVisitor<? extends T>)visitor).visitBreakStatement(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class IfStatementContext extends StatContext {
		public TerminalNode IF() { return getToken(LuaLikeParser.IF, 0); }
		public List<ExpContext> exp() {
			return getRuleContexts(ExpContext.class);
		}
		public ExpContext exp(int i) {
			return getRuleContext(ExpContext.class,i);
		}
		public List<TerminalNode> THEN() { return getTokens(LuaLikeParser.THEN); }
		public TerminalNode THEN(int i) {
			return getToken(LuaLikeParser.THEN, i);
		}
		public List<BlockContext> block() {
			return getRuleContexts(BlockContext.class);
		}
		public BlockContext block(int i) {
			return getRuleContext(BlockContext.class,i);
		}
		public TerminalNode END() { return getToken(LuaLikeParser.END, 0); }
		public List<TerminalNode> ELSEIF() { return getTokens(LuaLikeParser.ELSEIF); }
		public TerminalNode ELSEIF(int i) {
			return getToken(LuaLikeParser.ELSEIF, i);
		}
		public TerminalNode ELSE() { return getToken(LuaLikeParser.ELSE, 0); }
		public IfStatementContext(StatContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LuaLikeParserVisitor ) return ((LuaLikeParserVisitor<? extends T>)visitor).visitIfStatement(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class GenericForStatementContext extends StatContext {
		public TerminalNode FOR() { return getToken(LuaLikeParser.FOR, 0); }
		public NamelistContext namelist() {
			return getRuleContext(NamelistContext.class,0);
		}
		public TerminalNode IN() { return getToken(LuaLikeParser.IN, 0); }
		public ExplistContext explist() {
			return getRuleContext(ExplistContext.class,0);
		}
		public TerminalNode DO() { return getToken(LuaLikeParser.DO, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public TerminalNode END() { return getToken(LuaLikeParser.END, 0); }
		public GenericForStatementContext(StatContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LuaLikeParserVisitor ) return ((LuaLikeParserVisitor<? extends T>)visitor).visitGenericForStatement(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class FunctionStatementContext extends StatContext {
		public TerminalNode FUNCTION() { return getToken(LuaLikeParser.FUNCTION, 0); }
		public FuncnameContext funcname() {
			return getRuleContext(FuncnameContext.class,0);
		}
		public FuncbodyContext funcbody() {
			return getRuleContext(FuncbodyContext.class,0);
		}
		public FunctionStatementContext(StatContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LuaLikeParserVisitor ) return ((LuaLikeParserVisitor<? extends T>)visitor).visitFunctionStatement(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class LocalFunctionStatementContext extends StatContext {
		public TerminalNode LOCAL() { return getToken(LuaLikeParser.LOCAL, 0); }
		public TerminalNode FUNCTION() { return getToken(LuaLikeParser.FUNCTION, 0); }
		public TerminalNode NAME() { return getToken(LuaLikeParser.NAME, 0); }
		public FuncbodyContext funcbody() {
			return getRuleContext(FuncbodyContext.class,0);
		}
		public LocalFunctionStatementContext(StatContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LuaLikeParserVisitor ) return ((LuaLikeParserVisitor<? extends T>)visitor).visitLocalFunctionStatement(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class GotoStatementContext extends StatContext {
		public TerminalNode GOTO() { return getToken(LuaLikeParser.GOTO, 0); }
		public TerminalNode NAME() { return getToken(LuaLikeParser.NAME, 0); }
		public GotoStatementContext(StatContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LuaLikeParserVisitor ) return ((LuaLikeParserVisitor<? extends T>)visitor).visitGotoStatement(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class AssignmentStatementContext extends StatContext {
		public ExpContext exp() {
			return getRuleContext(ExpContext.class,0);
		}
		public TerminalNode EQUALS() { return getToken(LuaLikeParser.EQUALS, 0); }
		public ExplistContext explist() {
			return getRuleContext(ExplistContext.class,0);
		}
		public AssignmentStatementContext(StatContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LuaLikeParserVisitor ) return ((LuaLikeParserVisitor<? extends T>)visitor).visitAssignmentStatement(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ExpressionStatementContext extends StatContext {
		public ExpContext exp() {
			return getRuleContext(ExpContext.class,0);
		}
		public ExpressionStatementContext(StatContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LuaLikeParserVisitor ) return ((LuaLikeParserVisitor<? extends T>)visitor).visitExpressionStatement(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class NumericForStatementContext extends StatContext {
		public TerminalNode FOR() { return getToken(LuaLikeParser.FOR, 0); }
		public TerminalNode NAME() { return getToken(LuaLikeParser.NAME, 0); }
		public TerminalNode EQUALS() { return getToken(LuaLikeParser.EQUALS, 0); }
		public List<ExpContext> exp() {
			return getRuleContexts(ExpContext.class);
		}
		public ExpContext exp(int i) {
			return getRuleContext(ExpContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(LuaLikeParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(LuaLikeParser.COMMA, i);
		}
		public TerminalNode DO() { return getToken(LuaLikeParser.DO, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public TerminalNode END() { return getToken(LuaLikeParser.END, 0); }
		public NumericForStatementContext(StatContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LuaLikeParserVisitor ) return ((LuaLikeParserVisitor<? extends T>)visitor).visitNumericForStatement(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class LocalVariableDeclarationStatementContext extends StatContext {
		public TerminalNode LOCAL() { return getToken(LuaLikeParser.LOCAL, 0); }
		public TerminalNode NAME() { return getToken(LuaLikeParser.NAME, 0); }
		public AttribListContext attribList() {
			return getRuleContext(AttribListContext.class,0);
		}
		public TerminalNode EQUALS() { return getToken(LuaLikeParser.EQUALS, 0); }
		public ExplistContext explist() {
			return getRuleContext(ExplistContext.class,0);
		}
		public LocalVariableDeclarationStatementContext(StatContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LuaLikeParserVisitor ) return ((LuaLikeParserVisitor<? extends T>)visitor).visitLocalVariableDeclarationStatement(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class RepeatStatementContext extends StatContext {
		public TerminalNode REPEAT() { return getToken(LuaLikeParser.REPEAT, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public TerminalNode UNTIL() { return getToken(LuaLikeParser.UNTIL, 0); }
		public ExpContext exp() {
			return getRuleContext(ExpContext.class,0);
		}
		public RepeatStatementContext(StatContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LuaLikeParserVisitor ) return ((LuaLikeParserVisitor<? extends T>)visitor).visitRepeatStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatContext stat() throws RecognitionException {
		StatContext _localctx = new StatContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_stat);
		int _la;
		try {
			setState(170);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				_localctx = new EmptyStatementContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(88);
				match(SEMI);
				}
				break;
			case 2:
				_localctx = new AssignmentStatementContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(89);
				exp(0);
				setState(90);
				match(EQUALS);
				setState(91);
				explist();
				}
				break;
			case 3:
				_localctx = new LabelStatementContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(93);
				label();
				}
				break;
			case 4:
				_localctx = new BreakStatementContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(94);
				match(BREAK);
				}
				break;
			case 5:
				_localctx = new GotoStatementContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(95);
				match(GOTO);
				setState(96);
				match(NAME);
				}
				break;
			case 6:
				_localctx = new DoStatementContext(_localctx);
				enterOuterAlt(_localctx, 6);
				{
				setState(97);
				match(DO);
				setState(98);
				block();
				setState(99);
				match(END);
				}
				break;
			case 7:
				_localctx = new WhileStatementContext(_localctx);
				enterOuterAlt(_localctx, 7);
				{
				setState(101);
				match(WHILE);
				setState(102);
				exp(0);
				setState(103);
				match(DO);
				setState(104);
				block();
				setState(105);
				match(END);
				}
				break;
			case 8:
				_localctx = new RepeatStatementContext(_localctx);
				enterOuterAlt(_localctx, 8);
				{
				setState(107);
				match(REPEAT);
				setState(108);
				block();
				setState(109);
				match(UNTIL);
				setState(110);
				exp(0);
				}
				break;
			case 9:
				_localctx = new IfStatementContext(_localctx);
				enterOuterAlt(_localctx, 9);
				{
				setState(112);
				match(IF);
				setState(113);
				exp(0);
				setState(114);
				match(THEN);
				setState(115);
				block();
				setState(123);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==ELSEIF) {
					{
					{
					setState(116);
					match(ELSEIF);
					setState(117);
					exp(0);
					setState(118);
					match(THEN);
					setState(119);
					block();
					}
					}
					setState(125);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(128);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==ELSE) {
					{
					setState(126);
					match(ELSE);
					setState(127);
					block();
					}
				}

				setState(130);
				match(END);
				}
				break;
			case 10:
				_localctx = new NumericForStatementContext(_localctx);
				enterOuterAlt(_localctx, 10);
				{
				setState(132);
				match(FOR);
				setState(133);
				match(NAME);
				setState(134);
				match(EQUALS);
				setState(135);
				exp(0);
				setState(136);
				match(COMMA);
				setState(137);
				exp(0);
				setState(140);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==COMMA) {
					{
					setState(138);
					match(COMMA);
					setState(139);
					exp(0);
					}
				}

				setState(142);
				match(DO);
				setState(143);
				block();
				setState(144);
				match(END);
				}
				break;
			case 11:
				_localctx = new GenericForStatementContext(_localctx);
				enterOuterAlt(_localctx, 11);
				{
				setState(146);
				match(FOR);
				setState(147);
				namelist();
				setState(148);
				match(IN);
				setState(149);
				explist();
				setState(150);
				match(DO);
				setState(151);
				block();
				setState(152);
				match(END);
				}
				break;
			case 12:
				_localctx = new FunctionStatementContext(_localctx);
				enterOuterAlt(_localctx, 12);
				{
				setState(154);
				match(FUNCTION);
				setState(155);
				funcname();
				setState(156);
				funcbody();
				}
				break;
			case 13:
				_localctx = new LocalFunctionStatementContext(_localctx);
				enterOuterAlt(_localctx, 13);
				{
				setState(158);
				match(LOCAL);
				setState(159);
				match(FUNCTION);
				setState(160);
				match(NAME);
				setState(161);
				funcbody();
				}
				break;
			case 14:
				_localctx = new LocalVariableDeclarationStatementContext(_localctx);
				enterOuterAlt(_localctx, 14);
				{
				setState(162);
				match(LOCAL);
				setState(163);
				match(NAME);
				setState(164);
				attribList();
				setState(167);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==EQUALS) {
					{
					setState(165);
					match(EQUALS);
					setState(166);
					explist();
					}
				}

				}
				break;
			case 15:
				_localctx = new ExpressionStatementContext(_localctx);
				enterOuterAlt(_localctx, 15);
				{
				setState(169);
				exp(0);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AttribListContext extends ParserRuleContext {
		public TerminalNode LESS_THAN() { return getToken(LuaLikeParser.LESS_THAN, 0); }
		public VarlistContext varlist() {
			return getRuleContext(VarlistContext.class,0);
		}
		public TerminalNode GREATER_THAN() { return getToken(LuaLikeParser.GREATER_THAN, 0); }
		public AttribListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_attribList; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LuaLikeParserVisitor ) return ((LuaLikeParserVisitor<? extends T>)visitor).visitAttribList(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AttribListContext attribList() throws RecognitionException {
		AttribListContext _localctx = new AttribListContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_attribList);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(176);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				{
				setState(172);
				match(LESS_THAN);
				setState(173);
				varlist();
				setState(174);
				match(GREATER_THAN);
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
